v7.6
-----
+ Added an option to use dynamic data while browsing Greenlight pages
+ Added Twitch integration to Steam profiles that contain a link to the user's Twitch page
: Fixed an issue with remaining card drop calculations on badge pages


v7.5.2
-----
+ Added a "Get Help" button to store pages that links to that game's personal support portal
: Updated highlighting for the summer sale home page

v7.5.1
-----
+ Added Blue profile theme by Teliko
: Fixed a bug that caused Early Access banners not to be displayed
: Fixed a bug that caused badge completion costs to be in an incorrect currency for some users

v7.5
-----
+ Added player data from steamspy.com to app pages (thanks galyonkin!)
+ Added support for Coinbase.io and Funstock Digital to price comparisons
+ Added support for setting custom profile themes
+ Added Purple, Yellow, Red, Green, Pink, Orange, and Teal profile themes by Teliko
+ Added Clear profile theme
: Fixed an issue with price data not being in the correct denomination due to a change made by Valve
: Fixed a bug that caused the achievement sorting function not to work correctly
: Updated the Enhanced Steam Supporter section on supporter's profile pages to the latest visual style

v7.4
-----
+ Added a "View post history" button to user's profiles in the "More" dropdown box
+ Added price tier information to "Bundles that include this game" section
+ Added support for more currencies on badge pages
+ Added basic compatibility for extensions such as HTTPS Everywhere
: Significantly reduced the number of data queries while viewing badge pages
: Price history information for multiple items are now done through a single data request
: Rewrote how translation files are loaded which will reduce the amount of info in memory
: Fixed a bug that could cause the user's invite page not to process correctly
: Fixed a bug where cards with quotation marks in their name wouldn't show lowest price info