@@ -43,11 +43,19 @@
         "img/gl_banner.jpg",
         "css/enhancedsteam.css",
         "options.html",
-        "img/overlay/ea_292x136.png",
-        "img/overlay/ea_184x69.png",
-        "img/overlay/ea_sm_120.png",
-        "img/overlay/ea_231x87.png",
-        "img/overlay/ea_467x181.png",
+        "img/overlay/early_access_banner_brazilian.png",
+        "img/overlay/early_access_banner_english.png",
+        "img/overlay/early_access_banner_french.png",
+        "img/overlay/early_access_banner_italian.png",
+        "img/overlay/early_access_banner_japanese.png",
+        "img/overlay/early_access_banner_koreana.png",
+        "img/overlay/early_access_banner_polish.png",
+        "img/overlay/early_access_banner_portuguese.png",
+        "img/overlay/early_access_banner_russian.png",
+        "img/overlay/early_access_banner_schinese.png",
+        "img/overlay/early_access_banner_spanish.png",
+        "img/overlay/early_access_banner_tchinese.png",
+        "img/overlay/early_access_banner_thai.png",
         "img/flags/flags.png",
         "img/check_sheet.png",
         "img/flags/world.png",
